# 1IAST_fase_01

./: README.md
tech-challenge-01/: Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
tech-challenge-01/docs/: mkdocs.yml
tech-challenge-01/docs/docs/: index.md
tech-challenge-01/models/: best_params_20260422_231242.json  lgbm_best_model_20260422_231242.joblib  model.joblib  model_metrics_20260422_231242.json
tech-challenge-01/notebooks/: 01_EDA_notebook.ipynb  02_modeling.ipynb  TechChallenge_notebook.ipynb
tech-challenge-01/nps_estimator/: __init__.py  dataset.py  features.py  plots.py
tech-challenge-01/nps_estimator/modeling/: app_nps_inference.py  predict.py  train.py
tech-challenge-01/tech_challenge_01/: __init__.py  dataset.py  features.py  plots.py
tech-challenge-01/tech_challenge_01/modeling/: predict.py  train.py
tech-challenge-01/utils/: utils.py
