[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "nps-estimator"
version = "0.0.1"
description = "Projeto desenvolvido pelos colaboradores para o desafio Tech Challenge da Fase 01 do curso P\u00f3s-Tech IA Scientist - FIAP"
authors = [
  { name = "Carolina Yamada | Igor Constantino | Raphael Tavela | Rodrigo do Vale | Vinicius Miura" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "==3.14.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["tech_challenge_01"]
force_sort_within_sections = true


[tool.setuptools.packages.find]
where = ["."]

